BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_TDD__c.object
<CustomObject>
    <fields>
        <fullName>ACMModcod__c</fullName>
        <description>Currently selected ACM (Outroute) Modcod</description>
        <label>ACM Modcod</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AISSymcod__c</fullName>
        <description>Currently selected AIS (Inroute) Symcod.</description>
        <label>AIS Symcod</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARPMACEntry1__c</fullName>
        <description>First Ethernet MAC entry in the terminal’s ARP table.</description>
        <label>ARP MAC Entry-1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARPMACEntry2__c</fullName>
        <description>Second Ethernet MAC entry in the terminal’s ARP table.</description>
        <label>ARP MAC Entry-2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARPMACEntry3__c</fullName>
        <description>Third Ethernet MAC entry in the terminal’s ARP table.</description>
        <label>ARP MAC Entry-3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlarmEventType1__c</fullName>
        <description>Most recent entry in the terminal’s event log.</description>
        <label>Alarm/Event Type-1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlarmEventType2__c</fullName>
        <description>Second most recent entry in the terminal’s event log.</description>
        <label>Alarm/Event Type-2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlarmEventType3__c</fullName>
        <description>Third most recent entry in the terminal’s event log.</description>
        <label>Alarm/Event Type-3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlarmSeverity1__c</fullName>
        <description>Most recent entry in the terminal’s event log.</description>
        <label>Alarm Severity-1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlarmSeverity2__c</fullName>
        <description>Second most recent entry in the terminal’s event log.</description>
        <label>Alarm Severity-2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlarmSeverity3__c</fullName>
        <description>Third most recent entry in the terminal’s event log.</description>
        <label>Alarm Severity-3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlarmTimestamp1__c</fullName>
        <description>Most recent entry in the terminal’s event log.</description>
        <label>Alarm Timestamp-1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlarmTimestamp2__c</fullName>
        <description>Second most recent entry in the terminal’s event log.</description>
        <label>Alarm Timestamp-2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlarmTimestamp3__c</fullName>
        <description>Third most recent entry in the terminal’s event log.</description>
        <label>Alarm Timestamp-3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlohaACK__c</fullName>
        <description>Total number of transmitted Aloha (Unallocated) bursts that have been acknowledged by the IGM.</description>
        <label>Aloha ACK</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlohaNAK__c</fullName>
        <description>Total number of transmitted Aloha (Unallocated) bursts that have not been acknowledged by the IGM.</description>
        <label>Aloha NAK</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>TDD</relationshipLabel>
        <relationshipName>TDD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssociatedIPGW__c</fullName>
        <description>IPGW name that the terminal is associated to.</description>
        <label>Associated IPGW</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssociationStateCode__c</fullName>
        <description>State Code from the Association process.</description>
        <label>Association State Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvgLANSpeedThroughput__c</fullName>
        <description>If a LAN speed test has been executed on the terminal, the average LAN speed measure over the LAN speed test iterations.</description>
        <label>Avg LAN Speed Throughput</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Activity</label>
        <referenceTo>Hsvc_CaseActivity__c</referenceTo>
        <relationshipLabel>TDD</relationshipLabel>
        <relationshipName>TDD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>TDD</relationshipLabel>
        <relationshipName>TDD</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CommissioningSWVersion__c</fullName>
        <description>Commissioned software version.</description>
        <label>Commissioning SW Version</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DownlinkBeamID__c</fullName>
        <description>Downlink Beam ID, as indicated in the received OSDP message.</description>
        <label>Downlink Beam ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DownlinkEsNo__c</fullName>
        <description>Downlink Es/No (Energy per Symbol / Noise) of the outroute carrier expressed in hundredths of dB.</description>
        <label>Downlink Es/No</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DownlinkGatewayID__c</fullName>
        <description>Downlink Gateway ID, as indicated in the received OSDP message.</description>
        <label>Downlink Gateway ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DownlinkOutrouteID__c</fullName>
        <description>Downlink Outroute ID, as indicated in the received OSDP message.</description>
        <label>Downlink Outroute ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DownlinkOvertheAirFrequency__c</fullName>
        <description>Downlink Over-The-Air Frequency, as indicated in the received OSDP message.  Units are in kHz.</description>
        <label>Downlink Over-the-Air Frequency</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DownlinkSQF__c</fullName>
        <description>Current Downlink Signal Quality Factor (SQF) of the terminal.  Valid range is 0 to 255.</description>
        <label>Downlink SQF</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DownlinkStateCode__c</fullName>
        <description>State Code from the Downlink process.</description>
        <label>Downlink State Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DownlinkStreamID__c</fullName>
        <description>Downlink Beam ID, as provided via configuration.</description>
        <label>Downlink Stream ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DownlinkSymbolRate__c</fullName>
        <description>Downlink Symbol Rate, as provided via configuration.  Units are in Symbols-per-second (Sps).</description>
        <label>Downlink Symbol Rate</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Downlink__c</fullName>
        <description>Communication link from NOCC to the terminal.</description>
        <label>Downlink</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventEntry1__c</fullName>
        <description>Most recent entry in the terminal’s event log.</description>
        <label>Event Entry-1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventEntry2__c</fullName>
        <description>Second most recent entry in the terminal’s event log.</description>
        <label>Event Entry-2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventEntry3__c</fullName>
        <description>Third most recent entry in the terminal’s event log.</description>
        <label>Event Entry-3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAPStateCode__c</fullName>
        <description>State Code for Fair Access Policy (FAP).</description>
        <label>FAP State Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAPStatus__c</fullName>
        <description>Specifies the current FAP status of the site.</description>
        <label>FAP Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HourDiagnosticCode__c</fullName>
        <description>Hourly diagnostic code that covers the last three (3) hours.</description>
        <label>Hour Diagnostic Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPConnectivityAverageLatency__c</fullName>
        <description>Specifies the Average latency.</description>
        <label>IP Connectivity Average Latency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPConnectivityPacketsReceived__c</fullName>
        <description>Specifies number of packets received in the test.</description>
        <label>IP Connectivity Packets Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPConnectivityPacketsSent__c</fullName>
        <description>Specifies number of packets sent for the test.</description>
        <label>IP Connectivity Packets Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPConnectivityResult__c</fullName>
        <description>Executes IP Connectivity test on the Terminal and displays success or failure.</description>
        <label>IP Connectivity Result</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InrouteGroup__c</fullName>
        <description>Currently selected Inroute Group ID.</description>
        <label>Inroute Group</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANStatus__c</fullName>
        <description>Provides the LAN connection status {Up/Down}, the connection rate {1 = 10Mbps, 2 = 100Mbps, 3 = 1000Mbps}, and the duplex {HD = Half Duplex, FD = Full Duplex}.</description>
        <label>LAN Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAN_eth0_IPv4Address__c</fullName>
        <description>IPv4 address that is assigned to the terminal’s Ethernet (eth0) interface.</description>
        <label>LAN (eth0) IPv4 Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAN_eth0_IPv6_Address__c</fullName>
        <description>IPv6 address that is assigned to the terminal’s Ethernet (eth0) interface.</description>
        <label>LAN (eth0) IPv6 Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastLANSpeedTestTime__c</fullName>
        <description>If a LAN speed test has been executed on the terminal, the timestamp of the last time the LAN speed test was executed.</description>
        <label>Last LAN Speed Test Time</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastResetDate__c</fullName>
        <description>UTC Timestamp when the terminal was last restarted.</description>
        <label>Last Reset Date</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LongTermOutrouteEsNo__c</fullName>
        <description>Long term outroute Es/No (signal quality) as measured by the terminal.</description>
        <label>Long Term Outroute Es/No</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBXConnectionEntry1__c</fullName>
        <description>Most recent entry in the terminal’s Web Acceleration MBX log.</description>
        <label>MBX Connection Entry-1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBXConnectionEntry2__c</fullName>
        <description>Second most recent entry in the terminal’s Web Acceleration MBX log.</description>
        <label>MBX Connection Entry-2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBXConnectionEntry3__c</fullName>
        <description>Third most recent entry in the terminal’s Web Acceleration MBX log.</description>
        <label>MBX Connection Entry-3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBXStatus__c</fullName>
        <description>Provides the Web Acceleration Client (WAC) MBX backbone connection status to the Web Acceleration Server (WAS).</description>
        <label>MBX Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxLANSpeedThroughput__c</fullName>
        <description>If a LAN speed test has been executed on the terminal, the maximum LAN speed measure over the LAN speed test iterations.</description>
        <label>Max LAN Speed Throughput</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Information on failures</description>
        <label>Message</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinLANSpeedThroughput__c</fullName>
        <description>If a LAN speed test has been executed on the terminal, the minimum LAN speed measure over the LAN speed test iterations.</description>
        <label>Min LAN Speed Throughput</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinuteDiagnosticCode__c</fullName>
        <description>Minute diagnostic code the covers the last 15 minutes.</description>
        <label>Minute Diagnostic Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_classifierrules__c</fullName>
        <description>Total number of packet classification rules that have been configured.</description>
        <label>No. of classifier rules</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofClassifierRules__c</fullName>
        <description>Total number of packet classification rules that have been configured.</description>
        <label>Number of Classifier Rules</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperationalsoftwareVersion__c</fullName>
        <description>Current running terminal software version.</description>
        <label>Operational software Version</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEPBackbones__c</fullName>
        <description>Specifies the basic ability to carry TCP Traffic.</description>
        <label>PEP Backbones</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEPPacketsreceived__c</fullName>
        <description>Performance enhancement proxy packets received.</description>
        <label>PEP Packets received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PEPPacketstransmitted__c</fullName>
        <description>Performance enhancement proxy packets transmitted.</description>
        <label>PEP Packets transmitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PEPRetransmitrequestsreceived__c</fullName>
        <description>Performance enhancement proxy retransmit request received.</description>
        <label>PEP Retransmit requests received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PEPrequested__c</fullName>
        <description>Performance enhancement proxy retransmit request requested.</description>
        <label>PEP requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PFAvgUplinkPower__c</fullName>
        <description>Power Feedback Uplink Power</description>
        <label>PF Avg Uplink Power</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PFPowerWord__c</fullName>
        <description>Power Feedback Power word</description>
        <label>PF Power Word</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PFResult__c</fullName>
        <description>Power Feedback Result</description>
        <label>PF Result</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProbableCause1__c</fullName>
        <description>Most recent entry in the terminal’s event log.</description>
        <label>Probable Cause-1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProbableCause2__c</fullName>
        <description>Second most recent entry in the terminal’s event log.</description>
        <label>Probable Cause-2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProbableCause3__c</fullName>
        <description>Third most recent entry in the terminal’s event log.</description>
        <label>Probable Cause-3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RainState__c</fullName>
        <description>Current Rain state of the site.</description>
        <label>Rain State</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReceivedPEPError__c</fullName>
        <description>Performance enhancement proxy received error.</description>
        <label>Received PEP Error</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RemoteIP__c</fullName>
        <description>Specifies Remote IP of the Site.</description>
        <label>Remote IP</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResetEntry1__c</fullName>
        <description>Most recent entry in the terminal’s reset log.</description>
        <label>Reset Entry-1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResetEntry2__c</fullName>
        <description>Second most recent entry in the terminal’s reset log.</description>
        <label>Reset Entry-2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResetEntry3__c</fullName>
        <description>Third most recent entry in the terminal’s reset log.</description>
        <label>Reset Entry-3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoutefromAGW__c</fullName>
        <description>Specifies if the route from AGW exists or not.</description>
        <label>Route from AGW</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RouterDetected__c</fullName>
        <description>Specifies if a Router is connected to the terminal or not.</description>
        <label>Router Detected</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RxLANporterrors__c</fullName>
        <description>Received LAN port errors</description>
        <label>Rx LAN port errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBCStateCode__c</fullName>
        <description>State Code from the Satellite Based Commisioning (SBC) process.</description>
        <label>SBC State Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDLState__c</fullName>
        <description>Current Software Download (SDL) state.</description>
        <label>SDL State</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNHA__c</fullName>
        <description>Specifies if we have a link to gateway or not.</description>
        <label>SNHA</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQFBeacon1__c</fullName>
        <description>Signal Quality Factor (SQF) Beacon of the terminal. Reading 1 of three taken 20 seconds apart.</description>
        <label>SQF Beacon -1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SQFBeacon2__c</fullName>
        <description>Signal Quality Factor (SQF) Beacon of the terminal. Reading 2 of three taken 20 seconds apart.</description>
        <label>SQF Beacon -2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SQFBeacon3__c</fullName>
        <description>Signal Quality Factor (SQF) Beacon of the terminal. Reading 3 of three taken 20 seconds apart.</description>
        <label>SQF Beacon -3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SQFConus1__c</fullName>
        <description>Signal Quality Factor (SQF) Conus of the terminal. Reading 1 of three taken 20 seconds apart.</description>
        <label>SQF Conus – 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SQFConus2__c</fullName>
        <description>Signal Quality Factor (SQF) Conus of the terminal. Reading 2 of three taken 20 seconds apart.</description>
        <label>SQF Conus – 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SQFConus3__c</fullName>
        <description>Signal Quality Factor (SQF) Conus of the terminal. Reading 3 of three taken 20 seconds apart.</description>
        <label>SQF Conus – 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SQFPTP1__c</fullName>
        <description>Signal Quality Factor (SQF) PTP of the terminal. Reading 1 of three taken 20 seconds apart.</description>
        <label>SQF PTP - 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SQFPTP2__c</fullName>
        <description>Signal Quality Factor (SQF) PTP of the terminal. Reading 2 of three taken 20 seconds apart.</description>
        <label>SQF PTP – 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SQFPTP3__c</fullName>
        <description>Signal Quality Factor (SQF) PTP of the terminal. Reading 3 of three taken 20 seconds apart.</description>
        <label>SQF PTP - 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SQTAvgLatency__c</fullName>
        <description>Satellite Qos Average Latency</description>
        <label>SQT Avg Latency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SQTResults__c</fullName>
        <description>Satellite Qos Test Results</description>
        <label>SQT Results</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQTRxPackets__c</fullName>
        <description>Satellite Qos Received Packets</description>
        <label>SQT Rx Packets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SQTTxPackets__c</fullName>
        <description>Satellite Qos Transmitted Packets</description>
        <label>SQT Tx Packets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SerialNumber__c</fullName>
        <description>Electronic Serial Number (ESN) of the terminal.</description>
        <label>Serial Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SlotsBad1__c</fullName>
        <description>Bad Slots (Channel 3 R/V) Reading 1</description>
        <label>Slots Bad – 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SlotsBad2__c</fullName>
        <description>Bad Slots (Channel 3 R/V) Reading 2</description>
        <label>Slots Bad – 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SlotsError1__c</fullName>
        <description>Error Slots (Channel 3 R/V) Reading 1</description>
        <label>Slots Error - 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SlotsError2__c</fullName>
        <description>Error Slots (Channel 3 R/V) Reading 2</description>
        <label>Slots Error – 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SlotsGood1__c</fullName>
        <description>Good Slots (Channel 3 R/V) Reading 1</description>
        <label>Slots Good – 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SlotsGood2__c</fullName>
        <description>Good Slots (Channel 3 R/V) Reading 2</description>
        <label>Slots Good – 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SlotsSched1__c</fullName>
        <description>Scheduled Slots(Channel 3 R/V) Reading 1</description>
        <label>Slots Sched - 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SlotsSched2__c</fullName>
        <description>Scheduled Slots(Channel 3 R/V) Reading 2</description>
        <label>Slots Sched – 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SlotsTxed1__c</fullName>
        <description>Transmitted Slots(Channel 3 R/V) Reading 1</description>
        <label>Slots Txed – 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SlotsTxed2__c</fullName>
        <description>Transmitted Slots(Channel 3 R/V) Reading 2</description>
        <label>Slots Txed – 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StateCode__c</fullName>
        <description>State Code along with its description.</description>
        <label>State Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StreamACK__c</fullName>
        <description>Total number of transmitted Stream (Allocated) bursts that have been acknowledged by the IGM.</description>
        <label>Stream ACK</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StreamNAK__c</fullName>
        <description>Total number of transmitted Stream (Allocated) bursts that have not been acknowledged by the IGM.</description>
        <label>Stream NAK</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the calls were successful</description>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SystemStateCodeDescription__c</fullName>
        <description>Textual description of the System State Code.</description>
        <label>System State Code Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemStateCode__c</fullName>
        <description>Overall System State Code.</description>
        <label>System State Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCPAccelerationBackboneStatus__c</fullName>
        <description>Provides the TCP Acceleration (PEP) backbone connection status for each of the five (5) backbones.</description>
        <label>TCP Acceleration Backbone Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCPAccelerationStateCode__c</fullName>
        <description>State Code from the TCP Acceleration (PEP) process.</description>
        <label>TCP Acceleration State Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TerminalUpTime__c</fullName>
        <description>How long the terminal has been powered on.  Format is DDD.HH:MM:SS</description>
        <label>Terminal UpTime</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <description>UTC Timestamp at the terminal when the request was made.</description>
        <label>Timestamp</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalResets__c</fullName>
        <description>Total number of terminal resets.</description>
        <label>Total Resets</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransmitAttenuation__c</fullName>
        <description>Current transmit attenuation.  Units are in tenths (0.1) dB.</description>
        <label>Transmit Attenuation</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransmittedPEPError__c</fullName>
        <description>Performance enhancement proxy transmitted error.</description>
        <label>Transmitted PEP Error</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Turbopagestatus__c</fullName>
        <description>Specifies if Turbo Page is up or down.</description>
        <label>Turbo page status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TxLANporterrors__c</fullName>
        <description>Transmitted LAN port errors</description>
        <label>Tx LAN port errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UplinkStateCode__c</fullName>
        <description>State Code from the Uplink process.</description>
        <label>Uplink State Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uplink__c</fullName>
        <description>Communication link from terminal to NOCC.</description>
        <label>Uplink</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uptime__c</fullName>
        <description>Uptime of the terminal.</description>
        <label>Uptime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>TDD</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TDD-{0000}</displayFormat>
        <label>TDD ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TDD</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>